# boids-rs

./: Cargo.toml  README.md  build_wasm.sh  run_win.sh
.cargo/: config.toml
.git.old/: FETCH_HEAD  config  index
.git.old/logs/refs/heads/: master
.git.old/logs/refs/remotes/origin/: main  master
.git.old/refs/heads/: master
.git.old/refs/remotes/origin/: main
gh-pages/: boids.js  index.html
src/: main.rs
