[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2" }
bevy_egui = { version= "0.27.0", default-features = false, features = ["default_fonts", "render"]}
rand = "0.8.5"
rand_distr = "0.4.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
